# sidikey

./: .gitignore  app.py  cdk.json  package.json  pyproject.toml  requirements.txt
cdk_stacks/: sidikey_stack.py
lambda/: actions.py
sidikey/: service.py  sidikey_stack.py
tests/unit/: test_sidikey_stack.py
