[tool.poetry]
name = "sidikey_0"
version = "0.1.0"
description = ""
authors = ["restevean <restevean@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aws-cdk-lib = "^2.33.0"

[tool.poetry.dev-dependencies]
aws-cdk-lib = "^2.33.0"
"aws-cdk.aws-lambda-python-alpha" = "^2.33.0-alpha.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
